@@ -35,6 +35,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
 	 plugin loaded
   * Check if the user has perl 5.6 instead of 5.8 and give an warning dialog
     if they do (Peter Zelezny)
+  * Changed timer callbacks so that they are executed in the context that they
+    were created in
 
 
 ------------------------------------------------------------------------------
